Shade in Apache HttpClient